web-testing-yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-testing-service
spec:
  type: LoadBalancer
  selector:
    app: web-testing
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
